@@ -16,6 +16,8 @@ Version 1.51:
 		specified when calling the library
 	- Fixed a potential 32-bit overflow in the hashtable code, that could
 		occur for extremely large problems (thanks Paul Zimmermann)
+	- Fixed the computation of alpha value when polynomials are linear
+		(thanks Paul Zimmermann / Shi Bai)
 	- Fixed a line sieve initialization problem (thanks Ilya Popovyan)
 
 
